<resources>
    <string name="app_name">Bunjang</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="ImageMissing">이미지가 열리지 않습니다.</string>

    <!-- bottom_nav -->
    <string name="main_bottom_nav_home_title">홈</string>
    <string name="main_bottom_nav_search_title">검색</string>
    <string name="main_bottom_nav_register_title">등록</string>
    <string name="main_bottom_nav_lightning_talk_title">번개톡</string>
    <string name="main_bottom_nav_my_title">MY</string>

    <!-- Login -->
    <string name="login_kakao_text">카카오톡으로 시작하기</string>
    <string name="login_other_text">다른 방법으로 로그인</string>
    <string name="login_facebook_text">페이스북으로 시작하기</string>
    <string name="login_naver_text">네이버로 시작하기</string>
    <string name="login_phone_text">본인인증으로 시작하기</string>

    <!-- login_phone -->
    <string name="login_phone_title_first_top">이름을</string>
    <string name="login_phone_title_first_bottom">입력해주세요</string>
    <string name="login_phone_title_birth_top">생년월일을</string>
    <string name="login_phone_title_birth_bottom">입력해주세요</string>
    <string name="login_phone_title_telecom_top">통신사를</string>
    <string name="login_phone_title_telecom_bottom">선택해주세요</string>
    <string name="login_phone_title_number_top">휴대폰번호를</string>
    <string name="login_phone_title_number_bottom">입력해주세요</string>
    <string name="login_phone_title_password_top">비밀번호를</string>
    <string name="login_phone_title_password_bottom">입력해주세요</string>
    <string name="login_phone_title_check_top">입력한 정보를</string>
    <string name="login_phone_title_check_bottom">확인해주세요</string>
    <string name="login_phone_title_shop_top">마지막 단계입니다!</string>
    <string name="login_phone_title_shop_bottom">상점명을 입력해주세요</string>

    <string name="login_phone_textview_shop_name">상점명</string>
    <string name="login_phone_explain_shop_name_top">한글, 영어, 숫자만 사용할 수 있어요. (최대 10자)</string>
    <string name="login_phone_explain_shop_name_bottom">상점명은 고객님의 닉네임으로 사용될 예정이에요.</string>
    <string name="login_phone_textview_phone_number">휴대폰번호</string>
    <string name="login_phone_textview_phone_number_hint">01012345678</string>
    <string name="login_phone_textview_telecom">통신사</string>
    <string name="login_phone_button_telecom">통신사</string>
    <string name="login_phone_textview_password">비밀번호</string>
    <string name="login_phone_textview_birth">생년월일</string>
    <string name="login_phone_textview_birth_hint">예시: 900101</string>
    <string name="login_phone_textview_name">이름</string>
    <string name="login_phone_button_next">다음</string>
    <string name="login_phone_button_next_check">확인</string>

    <!-- dialog_login_phone_terms -->
    <string name="login_terms_textview_title_accept">약관동의</string>
    <string name="login_terms_textview_accept_all">전체 동의</string>

    <!-- fragment_home -->
    <string name="home_viewpager_count">%1$d/%2$d</string>
    <string name="home_recommend_title">%1$s님을 위한\n추천 상품 보고 가세요👀👇</string>

    <!-- product_detail -->
    <string name="product_detail_price">%1$s원</string>
    <string name="product_detail_location">지역정보 없음</string>
    <string name="product_detail_time">전</string>
    <string name="product_detail_default_number">0</string>
    <string name="product_detail_event_title">이벤트</string>
    <string name="product_detail_event_content">카드 최대 12개월 무이자 할부</string>
    <string name="product_detail_option_new">새상품</string>
    <string name="product_detail_option_old">중고상품</string>
    <string name="product_detail_option_count">총 %1$s개</string>
    <string name="product_detail_option_delivery_plus">배송비포함</string>
    <string name="product_detail_option_delivery">배송비별도</string>
    <string name="product_detail_option_exchange_impossible">교환불가</string>
    <string name="product_detail_option_exchange_possible">교환가능</string>
    <string name="product_detail_tag">%1$s</string>
    <string name="product_detail_shop_rating">0.0</string>
    <string name="product_detail_shop_follow_number">팔로워 0</string>
    <string name="title_temporary">제목제목제목</string>

    <!-- dialog_safe_pay -->
    <string name="dialog_safe_pay_title_top">번개페이 안전결제로\n구매를 시작합니다</string>
    <string name="dialog_safe_pay_title_bottom">거래방법을 선택해주세요</string>
    <string name="dialog_safe_pay_delivery_top">택배거래</string>
    <string name="dialog_safe_pay_delivery_bottom">상품을 받을 때까지 결제금액을 보관해요</string>
    <string name="dialog_safe_pay_direct_top">직거래</string>
    <string name="dialog_safe_pay_direct_bottom">현금없이 간편하게 결제할 수 있어요</string>
    <string name="dialog_safe_pay_button_next">다음</string>
    <string name="dialog_safe_pay_button_explain"><u>번개페이 안전결제란?</u></string>

    <!-- buy_delivery -->
    <string name="buy_delivery_title">택배거래, 안전결제로\n구매합니다</string>
    <string name="buy_direct_title">직거래, 안전결제로\n구매합니다</string>
    <string name="buy_delivery_area_title">배송지</string>
    <string name="buy_delivery_area_register">배송지를 등록해주세요</string>
    <string name="buy_delivery_area_register_button"><u>등록</u></string>
    <string name="buy_delivery_area_demand">배송 요청사항(선택)</string>
    <string name="buy_delivery_point_title">번개포인트</string>
    <string name="buy_delivery_point_all">전액사용</string>
    <string name="buy_delivery_point_possible">사용 가능한 번개 포인트</string>
    <string name="buy_delivery_payment">결제금액</string>
    <string name="buy_delivery_payment_explain">번개페이 혜택이\n적용되었습니다!</string>
    <string name="buy_delivery_payment_detail_see">자세히 보기</string>
    <string name="buy_delivery_method">결제수단</string>
    <string name="buy_delivery_method_other_register">결제수단을 등록해주세요</string>
    <string name="buy_delivery_today_benefit"><u>더보기</u></string>
    <string name="buy_delivery_agree_title">개인정보 제3자 제공동의와 결제대행 서비스 이용약관에 동의합니다.</string>
    <string name="buy_delivery_agree_detail_see"><u>자세히 보기</u></string>
    <string name="buy_delivery_agree_content_1">&quot;BGZT Digital&quot;, &quot;BGZT Lab 1&quot;, &quot;BGZT Lab2&quot;, &quot;BGZT 컬렉션&quot;</string>
    <string name="buy_delivery_agree_content_2">상점의 판매상품을 제외한 모든 상품들에 대하여, 번개장터(주)는</string>
    <string name="buy_delivery_agree_content_3">통신판매중개자로서 중고거래마켓 번개장터의 거래 당사자가 아니며,</string>
    <string name="buy_delivery_agree_content_4">입점판매자가 등록한 상품정보 및 거래에 대해 책임을 지지 않습니다.</string>

    <!-- address_manage -->
    <string name="address_manage_title">주소 관리</string>
    <string name="address_manage_add"><u>주소 추가</u></string>
    <string name="address_manage_modify"><u>수정</u></string>
    <string name="address_manage_delete"><u>삭제</u></string>
    <string name="address_manage_button_next">완료</string>

    <!-- method_other -->
    <string name="method_other_title">결제수단</string>
    <string name="method_other_second_select_card">카드사 선택</string>
    <string name="method_other_second_select_bank">은행 선택</string>
    <string name="method_other_notice_title_card">신용/체크카드 안내</string>
    <string name="method_other_notice_content_card">-결제 시 BC카드 TOP포인트, 현대카드 M포인트 사용가능\n-체크카드는 카드사 점검시간에 따라 이용이 불가\n-카드사별 무이자 할부 지원 : BC카드, NH농협카드, KB국민카드, 삼성카드, 신한카드, 하나카드, 롯데카드, 현대카드, 우리카드\n-일부 상품은 무이자 할부 및 혜택 적용이 불가</string>
    <string name="method_other_notice_content_card_2"><u>포인트/무이자 할부</u></string>
    <string name="method_other_notice_title_kakaopay">카카오페이 안내</string>
    <string name="method_other_notice_content_kakaopay">-카카오페이에 계좌 또는 카드를 등록하여 간편하게 결제할 수 있는 서비스입니다. (카드 등록 시 휴대폰과 카드 명의자가 일치해야 합니다.)</string>
    <string name="method_other_notice_title_naverpay">네이버페이 안내</string>
    <string name="method_other_notice_content_naverpay">-주문 변경 시 카드사 혜택 및 할부 적용 여부는 해당 카드사 정책에 따라 변경될 수 있습니다.\n-네이버페이는 네이버ID로 별도 앱 설치 없이 신용카드 또는 은행계좌 정보를 등록하여 네이버페이 비밀번호로 결제할 수 있는 간편결제 서비스입니다.\n-결제 가능한 신용카드:신한,삼성,현대,BC,국민,하나,롯데,NH농협,씨티,카카오뱅크\n-결제 가능한 은행:KB국민,IBK기업,NH농협,신한,씨티,SC제일,우리,카카오뱅크,케이뱅크,토스뱅크,하나,경남,광주,대구,부산,KDB산업,수협,우체국,전북,제주,새마을금고,신협,SBI저축,저축,미래에셋,삼성,신한금융투자,SK,유안타,유진투자,한국투자\n-네이버 페이 카드 간편결제는 네이버페이에서 제공하는 카드사 별 무이자,청구할인 혜택을 받을 수 있습니다.</string>
    <string name="method_other_notice_title_toss">토스 안내</string>
    <string name="method_other_notice_content_toss">-Toss는 간편송금/결제 서비스며, 번개장터에서는 등록된 계좌와 토스머니를 통해 쉽게 결제할 수 있습니다.\n-결제 및 사용관련 문의는 Toss 고객센터 (1599-4905)를 이용바랍니다.</string>
    <string name="method_other_notice_title_simple">간편계좌결제 안내</string>
    <string name="method_other_notice_content_simple">-내 계좌를 미리 등록하여 간편하게 결제 할 수 있는 간편 결제 서비스 입니다.\n-간편계좌결제서비스는 최대 200만원까지 결제 가능 합니다.</string>
    <string name="method_other_notice_title_phone">휴대폰결제 안내</string>
    <string name="method_other_notice_content_phone">-휴대폰 결제일 경우 결제 당월에만 결제수단 취소가 가능합니다.\n-휴대폰 결제 한도는 1회 30만원, 월 30만원까지 가능하며, 통신사 수납/가입상태 및 결제 대행사에 따라 한도가 상이할 수 있습니다.</string>
    <string name="method_other_notice_title_convenience">편의점결제 안내</string>
    <string name="method_other_notice_content_convenience">-CU / GS25 / 세븐일레븐 / 이마트24 편의점에서 현금으로 결제 가능합니다.\n-편의점 결제 환불의 경우 결제한 편의점에서만 가능 합니다.</string>
    <string name="method_other_notice_content_convenience_2"><u>결제방법 자세히 보기</u></string>
    <string name="method_other_notice_title_bank">무통장(가상계좌)</string>
    <string name="method_other_notice_content_bank">-원하는 은행으로 가상계좌를 발급받아 결제금액을 입금할 수 있는 서비스 입니다.\n가상계좌는 발급 후 24시간 후에 만료됩니다.</string>
    <string name="method_other_notice_title_chai">차이 안내</string>
    <string name="method_other_notice_content_chai">-차이는 은행 계좌만 등록하면 간편하게 결제할 수 있는 모바일 결제 서비스입니다.\n-은행 점검시간인 23:30 ~ 00:30 까지는 이용 불가합니다.</string>
    <string name="method_other_button_next">결제수단 적용하기</string>

    <!-- fragment_register -->
    <string name="register_direct"><u>직거래시 가능 지역</u></string>
    <string name="register_context_hint_big"><font size="14">여러 장의 상품 사진, 구입 연도, 브랜드, 사용감, 하자 유무 등 구매자에게 필요한 정보를 포함해 주세요.(10자 이상)</font><font size="12">\n안전하고 건전한 거래 환경을 위해 과학기술정보통신부, 한국인터넷진흥원과 번개장터(주)가 함께 합니다.</font></string>
    <string name="register_count">%1$d/2000</string>
    <string name="register_more_info"><u>자세히</u></string>
    <string name="register_product_count">%1$d개</string>
    <string name="register_kakao_info">혹시 <u>카카오톡 ID</u>를 적으셨나요?</string>

    <!-- fragment_tag -->
    <string name="register_tag_additional_1">-상품의 브랜드, 모델명 사이즈 등을 입력해보세요.</string>
    <string name="register_tag_additional_2">-검색과 검색 광고 등에 사용됩니다.</string>
    <string name="register_tag_additional_3">-상품과 관련이 없는 태그를 입력할 경우 상품의 노출이 중단되거나 삭제될 수 있습니다.</string>
</resources>
