<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    app:layout_behavior="com.google.android.material.bottomsheet.BottomSheetBehavior">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="30dp"
        android:layout_marginTop="50dp"
        android:layout_marginBottom="30dp"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/dialog_safe_pay_title_top"
            android:textColor="@color/black"
            android:textSize="26sp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:text="@string/dialog_safe_pay_title_bottom" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/dialog_safe_pay_ship_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:background="@drawable/background_btn_safe_pay_check"
            android:paddingHorizontal="10dp"
            android:paddingVertical="20dp">

            <CheckBox
                android:id="@+id/dialog_safe_pay_ship_checkbox"
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:button="@drawable/checkbox_item_login_phone_telecom_selector"
                android:checked="true"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/dialog_safe_pay_ship_top"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:text="@string/dialog_safe_pay_ship_top"
                android:textColor="@color/black"
                android:textSize="15sp"
                android:textStyle="bold"
                app:layout_constraintStart_toEndOf="@+id/dialog_safe_pay_ship_checkbox"
                app:layout_constraintTop_toTopOf="@+id/dialog_safe_pay_ship_checkbox" />

            <TextView
                android:id="@+id/dialog_safe_pay_ship_bottom"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:text="@string/dialog_safe_pay_ship_bottom"
                android:textColor="@color/black"
                android:textSize="13sp"
                app:layout_constraintStart_toEndOf="@+id/dialog_safe_pay_ship_checkbox"
                app:layout_constraintTop_toBottomOf="@+id/dialog_safe_pay_ship_top" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/dialog_safe_pay_direct_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:background="@drawable/background_btn_product_detail_event"
            android:paddingHorizontal="10dp"
            android:paddingVertical="20dp">

            <CheckBox
                android:id="@+id/dialog_safe_pay_direct_checkbox"
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:button="@drawable/checkbox_item_login_phone_telecom_selector"
                android:checked="false"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/dialog_safe_pay_direct_top"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:text="@string/dialog_safe_pay_direct_top"
                android:textColor="@color/black"
                android:textSize="15sp"
                android:textStyle="bold"
                app:layout_constraintStart_toEndOf="@+id/dialog_safe_pay_direct_checkbox"
                app:layout_constraintTop_toTopOf="@+id/dialog_safe_pay_direct_checkbox" />

            <TextView
                android:id="@+id/dialog_safe_pay_direct_bottom"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:text="@string/dialog_safe_pay_direct_bottom"
                android:textColor="@color/black"
                android:textSize="13sp"
                app:layout_constraintStart_toEndOf="@+id/dialog_safe_pay_direct_checkbox"
                app:layout_constraintTop_toBottomOf="@+id/dialog_safe_pay_direct_top" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <Button
            android:id="@+id/product_detail_btn_safe_pay"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/background_btn_product_detail_safe_pay"
            android:outlineProvider="none"
            android:text="@string/dialog_safe_pay_button_next"
            android:textColor="@color/white"
            android:layout_marginTop="20dp"/>

        <TextView
            android:layout_marginVertical="10dp"
            android:textColor="@color/black"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/dialog_safe_pay_button_explain"
            android:layout_gravity="center"/>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>